--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,11 +2,11 @@ FROM debian:oldstable
 
 LABEL maintainer="muribe-l"
 
-RUN 	apt -y update && \
+RUN apt -y update && \
 	apt -y install nginx
 
 COPY ./conf/default.conf /etc/nginx/sites-available/default
 
-EXPOSE 8080
+EXPOSE 443
 
-CMD ["nginx", "-s", "reload"]
+CMD ["nginx", "-g", "daemon off;"]
