--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -11,8 +11,9 @@ http {
         index index.php;
 
         location ~ \.php$ {
-            include fastcgi.conf;
-            fastcgi_pass wordpress:9000;
+            include astcgi.conf
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            wordpress:9000
         }
     }
 }
