--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,6 +2,7 @@ FROM debian:oldstable
 
 RUN apt update && \ 
     apt install mariadb-server -y && \ 
+    mkdir -p /var/run/mysqld && \
     chown -R mysql:mysql /var/run/mysqld
 
 EXPOSE 3306
