--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,19 +1,19 @@
 http {
-    server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
+	server {
+		listen 80;
 
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-        ssl_protocols TLSv1.3;
+	    #server_name DOMAIN_NAME.42.fr;
+    	#server_name www.DOMAIN_NAME.42.fr;
 
-        root /var/www/html;
-        index index.php;
+		index   index.php index.html index.htm;
+		root	/var/www/html/;
 
-        location ~ \.php$ {
-            include astcgi.conf
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            wordpress:9000
-        }
-    }
+		location / {
+		}
+
+		location ~ \.php$ {
+			include fastcgi.conf;
+			fastcgi_pass wordpress:9000;
+		}
+	}
 }
