--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,8 +2,9 @@ http {
 	server {
 		listen 80;
 
-	    #server_name DOMAIN_NAME.42.fr;
-    	#server_name www.DOMAIN_NAME.42.fr;
+        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+        ssl_protocols TLSv1.3;
 
 		index   index.php index.html index.htm;
 		root	/var/www/html/;
