--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,21 +7,23 @@ services:
       -  "433:433"
     volumes:
       - ./www:/var/www/html
+    networks:
+      - inception
   mariadb:
     build: ./requirements/mariadb
     container_name: mariadb
-    build:
-      context: ./requirements/mariadb
     volumes:
       - ./db_data:/var/lib/mysql
     ports:
       - "3306:3306"
+    networks:
+      - inception
   wordpress:
     build: ./requirements/wordpress
     container_name: wordpress
     image: wordpress
-    ports:
-      - 9000:9000
+    expose:
+      - 9000
     volumes:
       - ./www:/var/www/html
     depends_on:
@@ -31,3 +33,4 @@ services:
 
 networks:
   inception:
+    driver: bridge
