--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,11 @@
 FROM debian:oldstable
 
-ENV DEBIAN_FRONTEND=noninteractive
+RUN apt update
+RUN apt install -y mariadb-server
 
-RUN apt update 
-RUN apt install mariadb-server -y
-RUN mkdir -p /var/run/mysqld /var/lib/mysql
-RUN chown -R mysql:mysql /var/run/mysqld /var/lib/mysql && \
- chmod 755 /var/run/mysqld
+COPY 50-server.cnf /etc/mysql/mariadb.conf.d/.
+COPY init.sql /etc/mysql/init.sql
 
-CMD ["mysqld", "--user=root"]
+RUN mkdir /run/mysqld
+
+CMD ["mysqld"]
