--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,13 +3,13 @@ FROM debian:oldstable
 LABEL maintainer="muribe-l"
 
 RUN apt -y update && \
-	apt -y install nginx
+	apt -y install nginx openssl
 
 # generate ssl
 
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/C=ES/ST=Vizcaya/L=Urduliz/O=42/OU=42Urduliz/CN=muribe-l-42.fr"
+RUN openssl req -x509 -nodes -days 365 -subj  "/C=CA/ST=QC/O=C Inc/CN=muribe-l.com" -newkey rsa:2048 -keyout /etc/nginx/selfsigned.key -out /etc/nginx/selfsigned.crt
 
-COPY ./conf/default.conf /etc/nginx/sites-available/default
+COPY ./conf/default.conf /etc/nginx/nginx.conf
 
 
 CMD ["nginx", "-g", "daemon off;"]
