--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,16 +1,18 @@
 http {
 	server {
-		listen 80;
+        index index.php index.html;
+    
+        location / {
+        try_files $uri $uri/ =404;
+        }
 
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
         ssl_protocols TLSv1.3;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        root /var/www/html;
+        ssl_certificate /etc/nginx/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/selfsigned.key;
 
-		index   index.php index.html index.htm;
-		root	/var/www/html/;
-
-		location / {
-		}
 
 		location ~ \.php$ {
 			include fastcgi.conf;
@@ -18,3 +20,5 @@ http {
 		}
 	}
 }
+
+events {}
