--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -10,8 +10,8 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         root /var/www/html;
-        ssl_certificate /etc/nginx/selfsigned.crt;
-        ssl_certificate_key /etc/nginx/selfsigned.key;
+        ssl_certificate selfsigned.crt;
+        ssl_certificate_key selfsigned.key;
 
 
 		location ~ \.php$ {
