--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,9 +3,11 @@ FROM debian:oldstable
 RUN apt update
 RUN apt install -y mariadb-server
 
-COPY 50-server.cnf /etc/mysql/mariadb.conf.d/.
-COPY init.sql /etc/mysql/init.sql
-
 RUN mkdir /run/mysqld
+
+RUN mysql_install_db --user=mysql --ldata=/var/lib/mysql
+
+COPY init.sql /etc/mysql/
+COPY mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
 CMD ["mysqld"]
