--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -9,6 +9,6 @@ RUN apt -y update && \
 
 RUN openssl req -x509 -nodes -days 365 -subj  "/C=CA/ST=QC/O=C Inc/CN=e.com" -newkey rsa:2048 -keyout /etc/nginx/selfsigned.key -out /etc/nginx/selfsigned.crt
 
-COPY ./conf/default.conf /etc/nginx/nginx.conf
+COPY ./conf/default /etc/nginx/sites-available/.
 
 CMD ["nginx", "-g", "daemon off;"]
