--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,8 +5,10 @@ RUN apt install -y mariadb-server
 
 RUN mkdir /run/mysqld && chmod 750 /var/lib/mysql
 
-COPY init.sql /etc/mysql/
 COPY 50-server.cnf /etc/mysql/mariadb.conf.d/.
+
+RUN touch /etc/mysql/init.sql
+RUN chmod +wrx /etc/mysql/init.sql
 
 COPY start.sh /start.sh
 RUN chmod +x /start.sh
